syntax = "proto3";

import "protocol.proto";

//#options
option java_multiple_files = true;
option java_package = "services.scalable.pubsub.grpc";
option java_outer_classname = "ClientService";

package services.scalable.pubsub.grpc;
//#options

//#services
service GreeterService {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

//#services